# chore-tracker

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  OPS.md  TODO.md  config.yaml  default.nix  main.py  pyproject.toml
.github/workflows/: docker-publish.yml
chore_tracker/: checks.py  config.py  logging_config.py  main.py  notifier.py  scheduler.py
frontend/: components.json  index.html  package.json  vite.config.ts
frontend/src/: App.vue  router.ts  types.ts
frontend/src/assets/: index.css
frontend/src/components/ui/badge/: Badge.vue
frontend/src/components/ui/button/: Button.vue
frontend/src/components/ui/card/: Card.vue  CardTitle.vue
frontend/src/components/ui/checkbox/: Checkbox.vue
frontend/src/components/ui/input/: Input.vue
frontend/src/components/ui/label/: Label.vue
frontend/src/components/ui/separator/: Separator.vue
frontend/src/components/ui/table/: TableBody.vue  TableCell.vue  TableHead.vue  TableHeader.vue  TableRow.vue
frontend/src/lib/: api.ts
frontend/src/views/: ChecklistView.vue  HomeView.vue  MembersView.vue  RoomsView.vue  SettingsView.vue
goals/: Checklist.md  TODO.md  new_ui.md  redo_frontend.md  tests.md
static/: style.css
templates/: base.html  checklist.html  index.html  members.html  rooms.html  settings.html
tests/: conftest.py  helpers.py  test_checks.py  test_config.py  test_main_scheduler.py  test_notifier.py  test_scheduler.py  test_web.py
