[project]
name = "chore-tracker"
version = "0.1.0"
description = "Household chore tracker with room rotation and ntfy notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
chore-tracker = "chore_tracker.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/chore_tracker"]
