[project]
name = "chore-tracker"
version = "0.3.4"
description = "Household chore tracker with room rotation and ntfy notifications"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.2",
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "pytest>=9.0.3",
    "python-multipart>=0.0.32",
    "pyyaml>=6.0",
    "uvicorn[standard]>=0.49.0",
]

[project.scripts]
chore-tracker = "chore_tracker.main:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:DeprecationWarning",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["chore_tracker"]
